# cpp-pic

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  IDE.md  LANGUAGE.md  README.md  README.md.backup  README_bak.md  STRUCTURE.md  TOOLCHAIN.md  Toolchain.md  artice.txt  article.md  bugfix.md  install.sh  install_toolchain.md  linker.script  linker_script.txt  orderfile_macos.txt  sizes.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  platform_support.md
.github/workflows/: all-checks.yml  build-android-aarch64.yml  build-android-armv7a.yml  build-android-x86_64.yml  build-freebsd-aarch64.yml  build-freebsd-i386.yml  build-freebsd-riscv64.yml  build-freebsd-x86_64.yml  build-ios-aarch64.yml  build-linux-aarch64.yml  build-linux-armv7a.yml  build-linux-i386.yml  build-linux-mips64.yml  build-linux-riscv32.yml  build-linux-riscv64.yml  build-linux-x86_64.yml  build-linux.yml  build-macos-aarch64.yml  build-macos-x86_64.yml  build-openbsd-aarch64.yml  build-openbsd-i386.yml  build-openbsd-riscv64.yml  build-openbsd-x86_64.yml  build-solaris-aarch64.yml  build-solaris-i386.yml  build-solaris-x86_64.yml  build-uefi-aarch64.yml  build-uefi-x86_64.yml  build-uefi.yml  build-windows-aarch64.yml  build-windows-armv7a.yml  build-windows-i386.yml  build-windows-x86_64.yml  build-windows.yml  build.yml  ci.yml  docs.yml  release.yml  size-regression.yml  size-report.yml
cmake/: Common.cmake  CompilerFlags.cmake  ExtractBinary.cmake  Linux.cmake  Logging.cmake  Options.cmake  PICTransform.cmake  PostBuild.cmake  Sources.cmake  Target.cmake  Toolchain.cmake  Triples.cmake  UEFI.cmake  VerifyPICMode.cmake  Windows.cmake  function.order.macos  launch_qemu.cmake  macOS.cmake
cmake/data/: function.order.windows  linker.i386.ld  linker.mips64.ld  linker.openbsd.riscv64.ld  linker.riscv64.ld  linker.solaris.ld
cmake/scripts/: Base64Encode.cmake  ExtractBinary.cmake  PatchElfOSABI.cmake  VerifyPICMode.cmake
docs/: SCRIPT_TODO.md  architecture.md  language.md  platform_guide.md
include/: runtime.h
include/algorithms/: base64.h  djb2.h
include/bal/: architecute.h  bal.h  djb2.h  ip_address.h  memory.h  string.h  string_formatter.h
include/core/: binaryReader.h  binaryWriter.h  binary_reader.h  binary_writer.h  bitops.h  byteorder.h  core.h  error.h  math.h  memory.h
include/crypt/: chacha20.h  chacha20_encoder.h  ecc.h  sha2.h
include/io/: console.h  file_system.h  logger.h  path.h
include/language/: ast.h  fileio.h  interpreter.h  lexer.h  networkio.h  parser.h  pil.h  pool.h  state.h  stdlib.h  token.h  value.h
include/network/: dns.h  http.h  ip_address.h  socket.h  websocket.h
include/pal/: DateTime.h  allocator.h  console.h  date_time.h  logger.h  network.h  pal.h  random.h  socket.h
include/pil/: ast.h  fileio.h  interpreter.h  lexer.h  networkio.h  parser.h  pil.h  pool.h  state.h  stdlib.h  strutil.h  token.h  value.h
include/platform/: platform.h
include/ral/: logger.h  ral.h
include/runtime/: DateTime.h  console.h  logger.h  string.h
include/system/: date_time.h  environment.h  process.h  random.h
scripts/: README.md  loader.ps1  loader.py  remote_loader.py
sizes/: 2026-02-05_2b4e609.json  2026-02-05_7701ed2.json  2026-02-05_930c564.json  2026-02-05_97d1848.json  2026-02-05_a7fe00b.json  2026-02-05_bb07a95.json  2026-02-05_cc0e157.json  2026-02-05_e21ce42.json  2026-02-06_00de80a.json  2026-02-09_13df3bb.json  2026-02-09_ce41d23.json  2026-02-10_914ff56.json  2026-02-11_4f19eca.json  2026-02-11_7cced14.json  2026-02-23_2e3d277.json  2026-02-23_452f40b.json  2026-02-23_e7779d0.json  2026-02-24_0dcd3b2.json  2026-02-24_42a19b7.json  2026-02-24_49766d6.json  2026-02-24_7ef13da.json  2026-02-24_7fc7998.json  2026-02-24_a623b4a.json  2026-02-24_a97aec4.json  2026-02-25_1d19f61.json  2026-02-25_3269db2.json  2026-02-25_9a4f273.json  2026-02-26_349f5b4.json  2026-02-26_5d253f5.json  2026-02-26_b1be152.json  2026-02-26_c93af19.json  2026-02-26_d521fd6.json  2026-02-26_e6518ca.json  2026-02-26_ec5844a.json  2026-02-27_22c2bc3.json  2026-02-27_5f4e9bf.json  2026-02-28_015fe8e.json  2026-02-28_24d188c.json  2026-02-28_2ad610d.json  2026-02-28_43683fe.json  (+113 more)
src/: entry_point.cc  script_example.cc  start.cc
src/algorithms/: base64.cc
src/bal/: ip_address.cc  string.cc
src/core/: core.h  ip_address.cc  memory.cc
src/crypt/: chacha20.cc  chacha20_encoder.cc  ecc.cc  sha2.cc
src/io/: console.cc
src/network/: dns.cc  http.cc  ip_address.cc  websocket.cc
src/pal/: aeabi_runtime.cc  console.cc  platform.cc  random.cc
src/platform/: platform.h
src/runtime/: entry_point.cc  runtime.h  vector.h
src/system/: random.cc
tests/: README.md  array_storage_tests.h  base64_tests.h  binary_io_tests.h  djb2_tests.h  dns_tests.h  double_tests.h  ecc_tests.h  file_system_tests.h  filesystem_tests.h  image_tests.h  int64_tests.h  ip_address_tests.h  jpeg_tests.h  main.cc  memory_tests.h  pipe_tests.h  pir_tests.h  prng_tests.h  process_tests.h  random_tests.h  result_tests.h  screen_tests.h  sha_tests.h  size_report_tests.h  socket_tests.h  span_tests.h  start.cc  string_formatter_tests.h  string_tests.h  tests.h  tls_tests.h  uint64_tests.h  uuid_tests.h  vector_tests.h  websocket_tests.h
tests/language/: error_tests.h  fileio_tests.h  float_tests.h  language_tests.h  networkio_tests.h  pil_tests.h  state_tests.h  stdlib_tests.h  test_framework.h
tests/pil/: error_tests.h  fileio_tests.h  float_tests.h  language_tests.h  networkio_tests.h  pil_tests.h  script_tests.h  state_tests.h  stdlib_tests.h  test_framework.h
tests/pir/: array_storage_tests.h  base64_tests.h  djb2_tests.h  dns_tests.h  double_tests.h  ecc_tests.h  filesystem_tests.h  memory_tests.h  pir_tests.h  random_tests.h  sha_tests.h  socket_tests.h  string_formatter_tests.h  string_tests.h  tls_tests.h  websocket_tests.h
tools/pic-transform/: CMakeLists.txt  PICTransformOpt.cpp  PICTransformPass.cpp  PICTransformPass.h  README.md
(+898 files in other folders)
